# aiogram_fastapi_server

./: LICENSE  README.md  pyproject.toml
aiogram_fastapi_server/: __init__.py
